--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.4.1",
+    "aws-amplify": "^5.0.21",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
